<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/game_name"
        android:textSize="@dimen/title_font_size"
        android:textColor="@color/text_title"
        android:textStyle="bold"/>

    <com.ahao.game2048.ui.view.IconButton
        android:id="@+id/btn_classic"
        style="@style/main_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:bgColor="@color/bg_classic"
        app:icon="@drawable/ic_widgets_white_24dp"
        app:text="@string/classic_mode" />

    <com.ahao.game2048.ui.view.IconButton
        android:id="@+id/btn_timer"
        style="@style/main_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:bgColor="@color/bg_time"
        app:icon="@drawable/ic_access_alarm_white_24dp"
        app:text="@string/time_trial" />

    <com.ahao.game2048.ui.view.IconButton
        android:id="@+id/btn_how"
        style="@style/main_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:bgColor="@color/bg_common"
        app:text="@string/How_to_play" />

    <com.ahao.game2048.ui.view.IconButton
        android:id="@+id/btn_about"
        style="@style/main_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bgColor="@color/bg_common"
        app:text="@string/About_2048" />
</LinearLayout>