<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_chevron_left_32dp" />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_refresh_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <TextView
                android:id="@+id/text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8888"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best" />

            <TextView
                android:id="@+id/text_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8888"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.ahao.game2048.ui.view.GameLayout
            android:id="@+id/layout_classic_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bgColor="@color/bg_common"
            app:gap="10dp"
            app:radius="15"
            app:sharedPreference="@string/classic_mode"
            />
        <com.ahao.game2048.ui.view.GameLayout
            android:id="@+id/layout_time_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bgColor="@color/bg_common"
            app:gap="10dp"
            app:radius="15"
            app:sharedPreference="@string/time_trial"
            />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/text_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:text="8888"
            android:textColor="@color/bg_btn"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:text="88:88"
            android:textSize="13sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_title"
        android:textSize="50sp"
        android:text="游戏提示"/>
</LinearLayout>